--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@psychedelic/plug-connect": "^0.2.0",
     "babel-preset-next": "^1.4.0",
     "next": "12.0.9",
     "react": "17.0.2",
