--- a/package.json
+++ b/package.json
@@ -8,17 +8,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.12",
     "@psychedelic/plug-connect": "^0.2.0",
     "babel-preset-next": "^1.4.0",
-    "next": "12.0.9",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.3.1",
-    "styled-components": "^5.3.3"
+    "next": "13.2.4",
+    "next-react-svg": "^1.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "styled-components": "^5.3.9",
+    "touch": "^3.1.0"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^2.0.2",
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.9"
+    "@svgr/webpack": "^6.5.1",
+    "autoprefixer": "^10.4.14",
+    "babel-plugin-styled-components": "^2.0.7",
+    "eslint": "8.36.0",
+    "eslint-config-next": "13.2.4",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
