--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dfinity/agent": "^0.15.6",
     "@nextui-org/react": "^1.0.0-beta.12",
     "babel-preset-next": "^1.4.0",
     "next": "13.2.4",
