--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@dfinity/agent": "^0.15.6",
     "@nextui-org/react": "^1.0.0-beta.12",
     "babel-preset-next": "^1.4.0",
+    "gsap": "^3.11.5",
     "next": "13.2.4",
     "next-react-svg": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "styled-components": "^5.3.9",
+    "swiper": "^9.2.4",
     "touch": "^3.1.0"
   },
   "devDependencies": {
